gipfel ChangeLog
=================

gipfel-0.2.6
* Improve image saving. It is now possible to overwrite the current
  image file.
* Install README file to $PREFIX/share/doc/gipfel/.

gipfel-0.2.5
* Improved stitching speed.
* Fixed a bug with tiff file generation in stitching mode.
* Updated README file.

gipfel-0.2.4
* Fix another issue in the rectilinear projection code
   that affected non-horizontally shot pictures.
* Use a more robust forumla for spherical distance computation.
* Take refraction effect into account.

gipfel-0.2.3
* Fix a major shortcoming in the rectilinear projection
   code. This improves accuracy quite a bit, mostly in
   wideangle images.

gipfel-0.2.2
* Fix a segfault if exif tool is not installed.
* Some optimizations.
* Don't make view window larger than the screen.
* Add command line oprtions for data export.
* Add visibility command line option.
* Reset known hills when loading new image.
* Cancel "Choose Hill" dialog on Esc.
* Make code*Wall clean.

gipfel-0.2.1
* Fix compilation problem.
* Replace bilinear with bicubic interpolation in stitching mode (-b option).
* Improve usability of "Choose Viewpoint" dialog.
   Up/Down/Return now do what one would expect.
* Improve lens distortion correction.
   Horizontal main point offsets are taken into account now.
* Ask before overwriting existing lens profiles.
* Update alpinkoordinaten.dat datafile.

gipfel-0.2.0
* Change scale factor to "focal length in 35mm" this makes it 
   independent of the image size. One can now scale an already 
   oriented image without invalidating the orientation information.
* gipfel now tries to find a reasonable default for the scale value
   when opening new images based on the "Focal Length In 35mm" Exif 
   tag, if it exists.
* GPS Exif tags are used if they exist.
* gipfel can now correct lens distortion (see README).
* Switched to use maxima for symbolic computation and code generation.
* Switched to use th GNU Scientific Library instead of ccmath.