@@ -18,7 +18,6 @@ class Stitch {
 	private:
 		GipfelWidget *gipf[MAX_PICS];
 		int num_pics;
-		OutputImage *single_images[MAX_PICS];
 		OutputImage *merged_image;
 
 	public:
@@ -29,8 +28,6 @@ class Stitch {
 		int load_image(char *file);
 
 		OutputImage * set_output(OutputImage *img);
-
-		OutputImage * set_output(const char *file, OutputImage *img);
 
 		int resample(GipfelWidget::sample_mode_t m,
 			int w, int h, double view_start, double view_end);
